--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/base/_utilities.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/base/_utilities.scss
@@ -1827,7 +1827,7 @@ div.vjs-menu {
 
 		.privacy {
 			display: inline-block;
-			vertical-align: middle;	
+			vertical-align: top;	
 			
 			&::before {
 				color: var(--bb-rl-icon-primary-color);
